--- a/pageDetail1.html
+++ b/pageDetail1.html
@@ -21,12 +21,12 @@
   gtag('config', 'G-FM5D00GJ8P', {'user_id': window.localStorage.getItem('user_id')});
 </script>
 
-    <!-- Google Tag Manager -->
-    <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+   <!-- Google Tag Manager -->
+   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-58NJP8R');</script> -->
+    })(window,document,'script','dataLayer','GTM-58NJP8R');</script>
     <!-- End Google Tag Manager -->
     
     <meta charset="UTF-8">
