Separação em pastas

--- a/Lorenzo-Site/pageDetail2.html
+++ b/Lorenzo-Site/pageDetail2.html
@@ -43,7 +43,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <header>
     <div id="header-site">
         <h1>Lorenzo Site GA4</h1>
-        <a id='addtocart2' href="/purchase.html">Add to cart item 2</a>
+        <a id='addtocart2' href="/Lorenzo-Site/purchase.html">Add to cart item 2</a>
     </div>
 </header>
     
