--- a/itemListPage.html
+++ b/itemListPage.html
@@ -44,10 +44,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div id="header-site">
         <h1>Lorenzo Site GA4</h1>
         <button>
-            <a id="item1" href="/Lorenzo-Site/pageDetail1.html">Item 1</a>
+            <a id="item1" href="/pageDetail1.html">Item 1</a>
         </button>
         <button>
-            <a id="item2" href="/Lorenzo-Site/pageDetail2.html">Item 2</a>
+            <a id="item2" href="/pageDetail2.html">Item 2</a>
         </button>
     </div>
 </header>
