--- a/itemListPage.html
+++ b/itemListPage.html
@@ -21,13 +21,13 @@
   gtag('config', 'G-FM5D00GJ8P', {'user_id': window.localStorage.getItem('user_id')});
 </script>
 
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-58NJP8R');</script>
-        <!-- End Google Tag Manager -->
+   <!-- Google Tag Manager -->
+    <!--<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-58NJP8R');</script> -->
+    <!-- End Google Tag Manager -->
     
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,10 +44,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div id="header-site">
         <h1>Lorenzo Site GA4</h1>
         <button>
-            <a id="item1" href="/Lorenzo-Site/pageDetail1.html">Item 1</a>
+            <a id="item1" href="/pageDetail1.html">Item 1</a>
         </button>
         <button>
-            <a id="item2" href="/Lorenzo-Site/pageDetail2.html">Item 2</a>
+            <a id="item2" href="/pageDetail2.html">Item 2</a>
         </button>
     </div>
 </header>
