--- a/pageDetail2.html
+++ b/pageDetail2.html
@@ -22,11 +22,11 @@
 </script>
 
   <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    <!--<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-58NJP8R');</script>
+    })(window,document,'script','dataLayer','GTM-58NJP8R');</script> -->
     <!-- End Google Tag Manager -->
     
     <meta charset="UTF-8">
@@ -43,7 +43,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <header>
     <div id="header-site">
         <h1>Lorenzo Site GA4</h1>
-        <a id='addtocart2' href="/Lorenzo-Site/purchase.html">Add to cart item 2</a>
+        <a id='addtocart2' href="/purchase.html">Add to cart item 2</a>
     </div>
 </header>
     
