--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div id="header-site">
         <h1>Lorenzo Site GA4</h1>
         
-            <a id="promotion1" href="/itemListPage.html">Promotion 1</a>
+            <a id="promotion1" href="/Lorenzo-Site/itemListPage.html">Promotion 1</a>
         
-            <a id="promotion2" href="/itemListPage.html">Promotion 2</a>
+            <a id="promotion2" href="/Lorenzo-Site/itemListPage.html">Promotion 2</a>
 
             <button>
                 <a href="/measurement.html">Measurement Protocol Example Page</a>
