Alterando gtag para data layer

--- a/measurement.html
+++ b/measurement.html
@@ -10,7 +10,7 @@
             function gtag(){dataLayer.push(arguments)};
             gtag('js', new Date());
             gtag('config', 'G-FM5D00GJ8P', {
-                'user_id': window.localStorage.getItem('user_id'),
+                //'user_id': window.localStorage.getItem('user_id'),
                 'send_page_view': false
             });
     </script>
