--- a/purchase.html
+++ b/purchase.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <script src="ecommerce.js"></script>
+    <script type="application/javascript" src="/ecommerce.js"></script>
     <script>
         new Promise((resolve, reject) => {
             resolve(window.localStorage)
@@ -12,21 +12,12 @@
             }}).catch((error) => {console.log(error)});
     </script>
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FM5D00GJ8P"></script>
-    <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments)};
-  gtag('js', new Date());
-  gtag('config', 'G-FM5D00GJ8P', {'user_id': window.localStorage.getItem('user_id')});
-</script>
-
-   <!-- Google Tag Manager -->
-    <!--<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-58NJP8R');</script> -->
+    })(window,document,'script','dataLayer','GTM-NH87ZWD');</script>
     <!-- End Google Tag Manager -->
     
     <meta charset="UTF-8">
