--- a/pageDetail1.html
+++ b/pageDetail1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <script type="application/javascript" src="/ecommerce.js"></script>
+    <script type="application/javascript" src="ecommerce.js"></script>
     <script>
         new Promise((resolve, reject) => {
             resolve(window.localStorage)
