--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="application/javascript" src="ecommerce.js"></script>
+    <script src="ecommerce.js"></script>
 
     <script>
         new Promise((resolve, reject) => {
